<resources>
    <string name="app_name">Az Courier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag">Hola Fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_entregas">Entregas</string>
    <string name="title_historial">Historial</string>
    <string name="title_perfil">Perfil</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valbtnlogin">INICIE SESION</string>
    <string name="msgloginincompleto">Usuario y password son obligatorios</string>
    <string name="fragment_entregas">Entregas</string>
    <string name="fragment_historial">Historial</string>
    <string name="fragment_perfil">Perfil</string>

    <string name="titulodetallehistoria">Detalle Historial</string>
    <string name="titulodetalleentrega">DETALLE DE ENTREGA</string>
    <string name="remitente">Remitente:</string>
    <string name="consignado">Consignado:</string>
    <string name="direccion">Direccion:</string>
    <string name="distrito">Distrito:</string>
    <string name="telefono">Telefono:</string>
    <string name="codigo">Codigo:</string>
    <string name="tipo">Tipo:</string>
    <string name="estado">Estado:</string>
</resources>