<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_entregas">
    <fragment
        android:id="@+id/navigation_entregas"
        android:name="idat.dami.prueba.view.fragment.ListarEntregaFragment"
        android:label="@string/fragment_entregas"
        tools:layout="@layout/fragment_listar_entrega" />
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="idat.dami.prueba.view.fragment.PerfilFragment"
        android:label="@string/fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/navigation_historial"
        android:name="idat.dami.prueba.view.fragment.ListarHistorialFragment"
        android:label="@string/fragment_historial"
        tools:layout="@layout/fragment_listar_historial" />
</navigation>